--- a/ipynb/2016-01-08_dostoyevsky-idiot-python-object.ipynb
+++ b/ipynb/2016-01-08_dostoyevsky-idiot-python-object.ipynb
@@ -26,6 +26,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### boor-title"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dostoyevsky Idiot — python object"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### boor-short-content"
    ]
   },
@@ -33,11 +47,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're going to jsonify and objectify great creation of Fyodor Dostoyevsky -- The Idiot.<br/>\n",
-    "Hope we can get some interesting info from this structure later.<br/>\n",
-    "Now let's just try to get mixed feelings at the sight of result at least.\n",
+    "Let's jsonify and objectify great creation of Fyodor Dostoyevsky -- The Idiot.<br/>\n",
+    "Here's example of the obtained structure usage .<br/>\n",
     "\n",
-    "# {\"The Idiot\"}"
+    "\n",
+    "More about the process http://example.com\n",
+    "\n",
+    "\n"
    ]
   },
   {
