--- a/.ipynb/2016-01-08_dostoyevsky-idiot-python-object.ipynb
+++ b/.ipynb/2016-01-08_dostoyevsky-idiot-python-object.ipynb
@@ -69,12 +69,10 @@
     "collapsed": false
    },
    "source": [
-    "We're going to jsonify and objectify great creation of Fyodor Dostoyevsky -- The Idiot.<br/>\n",
-    "We'll get well structured data ready for futher experiments.<br/>\n",
-    "![Image](https://github.com/boorstat/boorstat.github.io/raw/master/images/dostoyevsky-idiot-object.jpg)\n",
+    "In <a href=\"/dostoyevsky/idiot/2017/01/08/dostoyevsky-idiot-python-object.html\">previous post</a> we've generated https://github.com/boorstat/boorstat-files/raw/master/lit/dostoevsky/idiot.json\">json</a> based on <a href=\"https://github.com/boorstat/boorstat-files/raw/master/lit/dostoevsky/The_Idiot.txt\">Idiot text</a>.\n",
     "\n",
-    "We have <a href=\"https://github.com/boorstat/boorstat-files/raw/master/lit/dostoevsky/The_Idiot.txt\">\"The Idiot\" text</a>.<br/>\n",
-    "That's top level function to objectify this text:"
+    "In this post we're going to use this data and visualise characters per chapter activity rate.\n",
+    "First of all we need dict of lists how characters can be called or named in text:"
    ]
   },
   {
