rude ipynb draft refactoring

--- a/.ipynb/2017-01-17_dostoyevsky-idiot-characters.ipynb
+++ b/.ipynb/2017-01-17_dostoyevsky-idiot-characters.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -76,7 +78,10 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "CHARACTERS = {\n",
@@ -115,7 +120,10 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import plotly.plotly as py"
@@ -131,17 +139,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~boorstat/8.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "output_type": "execute_result",
-     "metadata": {}
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -159,11 +173,12 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    "iplot([{\"x\": [1, 2, 3], \"y\": [3, 1, 6]}])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -175,7 +190,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
