The Idiot characters rates - draft alpha

--- a/.ipynb/2017-01-17_dostoyevsky-idiot-characters.ipynb
+++ b/.ipynb/2017-01-17_dostoyevsky-idiot-characters.ipynb
@@ -134,8 +134,209 @@
    "metadata": {},
    "source": [
     "Also we need to import our own python package: python-boorstat.<br/>\n",
-    "It can be easily installed using pip.<br/>\n"
+    "It can be easily installed using pip.<br/>\n",
+    "Read <a href=\"/setup/\">how</a>."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from boorstat.lit.dostoyevsky.idiot import idiot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the most top level of our visualization script:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "roman = idiot.from_json()\n",
+    "\n",
+    "data = parse_parts(roman)\n",
+    "traces = prepare_data(data)\n",
+    "plot(traces)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Final plot function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def plot(traces):\n",
+    "    # layout = go.Layout(title='Idiot Characters', width=800, height=640)\n",
+    "    layout = go.Layout(title='Idiot Characters')\n",
+    "    fig = go.Figure(data=traces, layout=layout)\n",
+    "\n",
+    "    # py.plot(fig, image='svg')\n",
+    "    # plotly.offline.plot(fig)\n",
+    "    # py.image.save_as(fig, filename='idiot-characters.png')\n",
+    "    go.iplot(\n",
+    "        {'figure': fig, 'layout': layout},\n",
+    "        filename='idiot-characters',\n",
+    "        sharing='public')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Couple of functions where idiot parts and chapters parsed and charactes rates are set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def rate_characters(chapter):\n",
+    "    characters = {}\n",
+    "\n",
+    "    for char, regexps in CHARACTERS.items():\n",
+    "        characters[char] = sum([len(re.findall(regex, chapter['text'], re.U)) for regex in regexps])\n",
+    "\n",
+    "    return characters\n",
+    "\n",
+    "\n",
+    "def parse_parts(roman):\n",
+    "    data = []\n",
+    "\n",
+    "    for part in roman['parts']:\n",
+    "        for chapter in part['chapters']:\n",
+    "            data.append({\n",
+    "                'chapter': '{} - {}'.format(part['title'], chapter['title']),\n",
+    "                'rates': rate_characters(chapter)})\n",
+    "\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And huge code to convert native python data to plotly objects ready for plotting:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def prepare_data(data):\n",
+    "    data = data\n",
+    "\n",
+    "    traces = []\n",
+    "\n",
+    "    for character in reversed(sorted(data[0]['rates'])):\n",
+    "        traces.append(go.Scatter(\n",
+    "            x=[],\n",
+    "            y=[],\n",
+    "            text=[],\n",
+    "            # fill='tozeroy' if not traces else 'tonexty',\n",
+    "            fill='tonexty',\n",
+    "            mode='none',\n",
+    "            line={'shape': 'spline'},\n",
+    "            hoverinfo='text',\n",
+    "            name=character))\n",
+    "\n",
+    "    sums = {}\n",
+    "    for trace in traces:\n",
+    "        for chapter in data:\n",
+    "            sums[chapter['chapter']] = sums.get(chapter['chapter'], 0) + chapter['rates'][trace['name']]\n",
+    "            trace['x'].append(chapter['chapter'])\n",
+    "            trace['y'].append(sums[chapter['chapter']])\n",
+    "            # trace['text'].append(trace['name'][:5])\n",
+    "            trace['text'].append(\n",
+    "                '{} - {}'.format(chapter['rates'][trace['name']], trace['name'])\n",
+    "                if chapter['rates'][trace['name']] else '')\n",
+    "\n",
+    "    traces_with_liners = []\n",
+    "    for trace in traces:\n",
+    "        traces_with_liners.append(trace)\n",
+    "        traces_with_liners.append(go.Scatter(\n",
+    "            x=trace['x'],\n",
+    "            y=trace['y'],\n",
+    "            # y=[y + 5 for y in trace['y']],\n",
+    "            # text=[''] * len(trace['x']),\n",
+    "            fill='tonexty',\n",
+    "            showlegend=False,\n",
+    "            line={'shape': 'spline'},\n",
+    "            hoverinfo='none',\n",
+    "            mode='none',\n",
+    "            fillcolor='#ffffff'\n",
+    "        ))\n",
+    "\n",
+    "    return traces_with_liners\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And returning to code from which we started - let's see the plot result:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "roman = idiot.from_json()\n",
+    "\n",
+    "data = parse_parts(roman)\n",
+    "traces = prepare_data(data)\n",
+    "plot(traces)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
