--- a/.ipynb/2017-03-05_dostoyevsky-idiot-characters.ipynb
+++ b/.ipynb/2017-03-05_dostoyevsky-idiot-characters.ipynb
@@ -9,18 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import re\n",
     "import sys\n",
     "sys.path.append('/Users/baza/dev/python-boorstat/')\n",
     "\n",
     "#from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
-    "#init_notebook_mode(connected=True)\n",
     "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
     "\n",
     "import boorstat"
    ]
@@ -36,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualised Dostoyevsky Idiot characters activity"
+    "Visualised Dostoyevsky Idiot characters activity rate"
    ]
   },
   {
@@ -50,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's jsonify and objectify great creation of Fyodor Dostoyevsky -- The Idiot.<br/>\n",
+    "Let's jsonify and objectify great creation of Fyodor Dostoyevsky — The Idiot.<br/>\n",
     "Among the images there is example of the obtained structure usage.<br/>\n",
     "![Image](https://github.com/boorstat/boorstat.github.io/raw/master/images/dostoyevsky-idiot-object.jpg)\n",
     "\n",
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -115,18 +116,19 @@
    "metadata": {},
    "source": [
     "<a href=\"https://plot.ly\">Plotly</a> and its python API is used to visualise data at the final stage.<br/>\n",
-    "Se we need to make some imports for it:"
+    "Se we need to do some imports for it:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import plotly.plotly as py"
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go"
    ]
   },
   {
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -158,17 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "roman = idiot.from_json()\n",
+    "# roman = idiot.from_json()\n",
     "\n",
-    "data = parse_parts(roman)\n",
-    "traces = prepare_data(data)\n",
-    "plot(traces)"
+    "# data = parse_parts(roman)\n",
+    "# traces = prepare_data(data)\n",
+    "# plot(traces)"
    ]
   },
   {
@@ -180,22 +182,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def plot(traces):\n",
-    "    # layout = go.Layout(title='Idiot Characters', width=800, height=640)\n",
     "    layout = go.Layout(title='Idiot Characters')\n",
     "    fig = go.Figure(data=traces, layout=layout)\n",
     "\n",
-    "    # py.plot(fig, image='svg')\n",
-    "    # plotly.offline.plot(fig)\n",
-    "    # py.image.save_as(fig, filename='idiot-characters.png')\n",
-    "    go.iplot(\n",
-    "        {'figure': fig, 'layout': layout},\n",
+    "    return py.iplot(\n",
+    "        fig,\n",
     "        filename='idiot-characters',\n",
     "        sharing='public')"
    ]
@@ -209,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -245,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -261,7 +259,6 @@
     "            x=[],\n",
     "            y=[],\n",
     "            text=[],\n",
-    "            # fill='tozeroy' if not traces else 'tonexty',\n",
     "            fill='tonexty',\n",
     "            mode='none',\n",
     "            line={'shape': 'spline'},\n",
@@ -274,7 +271,6 @@
     "            sums[chapter['chapter']] = sums.get(chapter['chapter'], 0) + chapter['rates'][trace['name']]\n",
     "            trace['x'].append(chapter['chapter'])\n",
     "            trace['y'].append(sums[chapter['chapter']])\n",
-    "            # trace['text'].append(trace['name'][:5])\n",
     "            trace['text'].append(\n",
     "                '{} - {}'.format(chapter['rates'][trace['name']], trace['name'])\n",
     "                if chapter['rates'][trace['name']] else '')\n",
@@ -285,8 +281,6 @@
     "        traces_with_liners.append(go.Scatter(\n",
     "            x=trace['x'],\n",
     "            y=trace['y'],\n",
-    "            # y=[y + 5 for y in trace['y']],\n",
-    "            # text=[''] * len(trace['x']),\n",
     "            fill='tonexty',\n",
     "            showlegend=False,\n",
     "            line={'shape': 'spline'},\n",
@@ -302,45 +296,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And returning to code from which we started - let's see the plot result:"
+    "And returning to code from which we started — let's see the plot result:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "roman = idiot.from_json()\n",
-    "\n",
-    "data = parse_parts(roman)\n",
-    "traces = prepare_data(data)\n",
-    "plot(traces)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -348,38 +309,24 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~boorstat/8.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~boorstat/10.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "py.iplot({                      # use `py.iplot` inside the ipython notebook\n",
-    "    \"data\": [{\n",
-    "        \"x\": [1, 2, 3],\n",
-    "        \"y\": [4, 2, 5]\n",
-    "    }],\n",
-    "    \"layout\": {\n",
-    "        \"title\": \"hello world\"\n",
-    "    }\n",
-    "    }, filename='hello world',      # name of the file as saved in your plotly account\n",
-    "    sharing='public')            # 'public' | 'private' | 'secret': Learn more: https://plot.ly/python/privacy"
+    "roman = idiot.from_json()\n",
+    "\n",
+    "data = parse_parts(roman)\n",
+    "traces = prepare_data(data)\n",
+    "plot(traces)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -387,18 +334,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
   }
  },
  "nbformat": 4,
