short descr for post 2

--- a/.ipynb/2017-03-05_dostoyevsky-idiot-characters.ipynb
+++ b/.ipynb/2017-03-05_dostoyevsky-idiot-characters.ipynb
@@ -51,13 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's jsonify and objectify great creation of Fyodor Dostoyevsky — The Idiot.<br/>\n",
-    "Among the images there is example of the obtained structure usage.<br/>\n",
-    "![Image](https://github.com/boorstat/boorstat.github.io/raw/master/images/dostoyevsky-idiot-object.jpg)\n",
-    "\n",
-    "More about the process http://example.com\n",
-    "\n",
-    "\n"
+    "Here is an example of usage The Idiot json to visualise characters activity rate along the chapters."
    ]
   },
   {
