--- a/.ipynb/2017-03-07_pushkin-duels-csv.ipynb
+++ b/.ipynb/2017-03-07_pushkin-duels-csv.ipynb
@@ -71,18 +71,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
+    "```\n",
     "year,opponent_name,opponent_descr,cause,pushkin_shot,opponent_shot\n",
     "1816,Paul Hannibal,uncle,during a ball Paul lugged away Pushkin’s girlfriend miss Loshakova,0,0\n",
     "1817,Pyotr Kaverin,friend,Kaverin’s facetious poem,0,0\n",
     "1819,Kondratiy Ryleev,poet,Ryleev told a joke about Pushkin at a high society gathering,0,0\n",
-    "1819,Wilhelm Kiichelbecker,frien,funny verses about Küchelbecker,0,1\n",
+    "1819,Wilhelm Kiichelbecker,friend,funny verses about Küchelbecker,0,1\n",
     "1819,Modest Korf,Ministry of justice worker,Pushkin’s drunk manservant pestered Korf’s servant, who finally beat Pushkin’s servant up,0,0\n",
     "1819,Denisevich,Major,Pushkin behaved provocatively in theater: he yelled at actors,0,0\n",
     "1820,Orlov Fedor and Alexey Alexeev,,Orlov and Alexeev reprimanded Pushkin for being drunk and trying to play pool,0,0\n",
@@ -105,7 +102,8 @@
     "1836,Semyon Hlustin,Foreign Office worker,Hlustin did not approve of Pushkin’s poetry,0,0\n",
     "1836,Vladimir Sollogub,minor Russian writer,Sologub’s unflattering remarks about the poet’s wife Natalia.0,0\n",
     "1836,George d’Anthès,French officer,an anonymous letter which stated that Pushkin’s wife had been cheating on her husband with d’Anthès,0,0\n",
-    "1837,George d’Anthès,French officer,an anonymous letter which stated that Pushkin’s wife had been cheating on her husband with d’Anthès,1,1"
+    "1837,George d’Anthès,French officer,an anonymous letter which stated that Pushkin’s wife had been cheating on her husband with d’Anthès,1,1\n",
+    "```"
    ]
   },
   {
