--- a/.ipynb/2017-03-07_pushkin-duels-csv.ipynb
+++ b/.ipynb/2017-03-07_pushkin-duels-csv.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -215,41 +215,334 @@
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1819</td>\n",
+       "      <td>Denisevich</td>\n",
+       "      <td>Major</td>\n",
+       "      <td>Pushkin behaved provocatively in theater: he y...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1820</td>\n",
+       "      <td>Orlov Fedor and Alexey Alexeev</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Orlov and Alexeev reprimanded Pushkin for bein...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1821</td>\n",
+       "      <td>Deguilly</td>\n",
+       "      <td>French military officer</td>\n",
+       "      <td>a quarrel under unclear circumstances</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1822</td>\n",
+       "      <td>Semyon Starov</td>\n",
+       "      <td>lieutenant colonel</td>\n",
+       "      <td>a conflict occurred because of a restaurant or...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1822</td>\n",
+       "      <td>Ivan Lanov</td>\n",
+       "      <td>65-year-old state councilor</td>\n",
+       "      <td>a quarrel during a holiday dinner</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1822</td>\n",
+       "      <td>Todor Balsh</td>\n",
+       "      <td>Moldavian nobleman</td>\n",
+       "      <td>Balsh’s wife Maria responded to Pushkin’s ques...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1822</td>\n",
+       "      <td>Skartla Pruncul</td>\n",
+       "      <td>Bessarabian landowner</td>\n",
+       "      <td>they were seconds at someone else’s duel and c...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1822</td>\n",
+       "      <td>Seweryn Potocki</td>\n",
+       "      <td>Active Privy Councillor</td>\n",
+       "      <td>discussion about serfdom at the dinner table</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1822</td>\n",
+       "      <td>Rutkowski</td>\n",
+       "      <td>captain</td>\n",
+       "      <td>Pushkin did not believe that a hailstone can w...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1822</td>\n",
+       "      <td>Inglezi</td>\n",
+       "      <td>Chisinau tycoon</td>\n",
+       "      <td>Pushkin coveted his wife (a gypsy woman Ludmil...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1832</td>\n",
+       "      <td>Alexander Zubov</td>\n",
+       "      <td>General Staff warrant officer</td>\n",
+       "      <td>Pushkin had caught Zubov on cheating during a ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1823</td>\n",
+       "      <td>Ivan Rousseau</td>\n",
+       "      <td>young writer</td>\n",
+       "      <td>Pushkin’s personal dislike for this person</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1826</td>\n",
+       "      <td>Nikolay Turgenev</td>\n",
+       "      <td>one of the leaders of the Union of Welfare and...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1827</td>\n",
+       "      <td>Vladimir Solomirskiy</td>\n",
+       "      <td>artillery officer</td>\n",
+       "      <td>the officer’s female friend Sofia to whom Push...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1828</td>\n",
+       "      <td>Alexander Golitsyn</td>\n",
+       "      <td>Minister of Education</td>\n",
+       "      <td>Pushkin wrote a bold epigram so the Minister a...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1828</td>\n",
+       "      <td>Lagrenée</td>\n",
+       "      <td>French Embassy Secretary in St.Petersburg</td>\n",
+       "      <td>an unknown girl at a ball</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1829</td>\n",
+       "      <td>Mr. Hvostov</td>\n",
+       "      <td>Foreign Office worker</td>\n",
+       "      <td>Hvostov was dissatisfied by Pushkin’s epigrams</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1836</td>\n",
+       "      <td>Nikolay Repin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Repin was dissatisfied with Pushkin’s poems ab...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>1836</td>\n",
+       "      <td>Semyon Hlustin</td>\n",
+       "      <td>Foreign Office worker</td>\n",
+       "      <td>Hlustin did not approve of Pushkin’s poetry</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1836</td>\n",
+       "      <td>Vladimir Sollogub</td>\n",
+       "      <td>minor Russian writer</td>\n",
+       "      <td>Sologub’s unflattering remarks about the poet’...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>1836</td>\n",
+       "      <td>George d’Anthès</td>\n",
+       "      <td>French officer</td>\n",
+       "      <td>an anonymous letter which stated that Pushkin’...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>1837</td>\n",
+       "      <td>George d’Anthès</td>\n",
+       "      <td>French officer</td>\n",
+       "      <td>an anonymous letter which stated that Pushkin’...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   year          opponent_name              opponent_descr  \\\n",
-       "0  1816          Paul Hannibal                       uncle   \n",
-       "1  1817          Pyotr Kaverin                      friend   \n",
-       "2  1819       Kondratiy Ryleev                        poet   \n",
-       "3  1819  Wilhelm Kiichelbecker                       frien   \n",
-       "4  1819            Modest Korf  Ministry of justice worker   \n",
+       "    year                   opponent_name  \\\n",
+       "0   1816                   Paul Hannibal   \n",
+       "1   1817                   Pyotr Kaverin   \n",
+       "2   1819                Kondratiy Ryleev   \n",
+       "3   1819           Wilhelm Kiichelbecker   \n",
+       "4   1819                     Modest Korf   \n",
+       "5   1819                      Denisevich   \n",
+       "6   1820  Orlov Fedor and Alexey Alexeev   \n",
+       "7   1821                        Deguilly   \n",
+       "8   1822                   Semyon Starov   \n",
+       "9   1822                      Ivan Lanov   \n",
+       "10  1822                     Todor Balsh   \n",
+       "11  1822                 Skartla Pruncul   \n",
+       "12  1822                 Seweryn Potocki   \n",
+       "13  1822                       Rutkowski   \n",
+       "14  1822                         Inglezi   \n",
+       "15  1832                 Alexander Zubov   \n",
+       "16  1823                   Ivan Rousseau   \n",
+       "17  1826                Nikolay Turgenev   \n",
+       "18  1827            Vladimir Solomirskiy   \n",
+       "19  1828              Alexander Golitsyn   \n",
+       "20  1828                        Lagrenée   \n",
+       "21  1829                     Mr. Hvostov   \n",
+       "22  1836                   Nikolay Repin   \n",
+       "23  1836                  Semyon Hlustin   \n",
+       "24  1836               Vladimir Sollogub   \n",
+       "25  1836                 George d’Anthès   \n",
+       "26  1837                 George d’Anthès   \n",
        "\n",
-       "                                               cause  pushkin_shot  \\\n",
-       "0  during a ball Paul lugged away Pushkin’s girlf...             0   \n",
-       "1                           Kaverin’s facetious poem             0   \n",
-       "2  Ryleev told a joke about Pushkin at a high soc...             0   \n",
-       "3                    funny verses about Küchelbecker             0   \n",
-       "4  Pushkin’s drunk manservant pestered Korf’s ser...             0   \n",
+       "                                       opponent_descr  \\\n",
+       "0                                               uncle   \n",
+       "1                                              friend   \n",
+       "2                                                poet   \n",
+       "3                                               frien   \n",
+       "4                          Ministry of justice worker   \n",
+       "5                                               Major   \n",
+       "6                                                 NaN   \n",
+       "7                             French military officer   \n",
+       "8                                  lieutenant colonel   \n",
+       "9                         65-year-old state councilor   \n",
+       "10                                 Moldavian nobleman   \n",
+       "11                              Bessarabian landowner   \n",
+       "12                            Active Privy Councillor   \n",
+       "13                                            captain   \n",
+       "14                                    Chisinau tycoon   \n",
+       "15                      General Staff warrant officer   \n",
+       "16                                       young writer   \n",
+       "17  one of the leaders of the Union of Welfare and...   \n",
+       "18                                  artillery officer   \n",
+       "19                              Minister of Education   \n",
+       "20          French Embassy Secretary in St.Petersburg   \n",
+       "21                              Foreign Office worker   \n",
+       "22                                                NaN   \n",
+       "23                              Foreign Office worker   \n",
+       "24                               minor Russian writer   \n",
+       "25                                     French officer   \n",
+       "26                                     French officer   \n",
        "\n",
-       "   opponent_shot  \n",
-       "0            0.0  \n",
-       "1            0.0  \n",
-       "2            0.0  \n",
-       "3            1.0  \n",
-       "4            0.0  "
+       "                                                cause  pushkin_shot  \\\n",
+       "0   during a ball Paul lugged away Pushkin’s girlf...             0   \n",
+       "1                            Kaverin’s facetious poem             0   \n",
+       "2   Ryleev told a joke about Pushkin at a high soc...             0   \n",
+       "3                     funny verses about Küchelbecker             0   \n",
+       "4   Pushkin’s drunk manservant pestered Korf’s ser...             0   \n",
+       "5   Pushkin behaved provocatively in theater: he y...             0   \n",
+       "6   Orlov and Alexeev reprimanded Pushkin for bein...             0   \n",
+       "7               a quarrel under unclear circumstances             0   \n",
+       "8   a conflict occurred because of a restaurant or...             1   \n",
+       "9                   a quarrel during a holiday dinner             0   \n",
+       "10  Balsh’s wife Maria responded to Pushkin’s ques...             1   \n",
+       "11  they were seconds at someone else’s duel and c...             0   \n",
+       "12       discussion about serfdom at the dinner table             0   \n",
+       "13  Pushkin did not believe that a hailstone can w...             0   \n",
+       "14  Pushkin coveted his wife (a gypsy woman Ludmil...             0   \n",
+       "15  Pushkin had caught Zubov on cheating during a ...             0   \n",
+       "16         Pushkin’s personal dislike for this person             0   \n",
+       "17                                                  0             0   \n",
+       "18  the officer’s female friend Sofia to whom Push...             0   \n",
+       "19  Pushkin wrote a bold epigram so the Minister a...             0   \n",
+       "20                          an unknown girl at a ball             0   \n",
+       "21     Hvostov was dissatisfied by Pushkin’s epigrams             0   \n",
+       "22  Repin was dissatisfied with Pushkin’s poems ab...             0   \n",
+       "23        Hlustin did not approve of Pushkin’s poetry             0   \n",
+       "24  Sologub’s unflattering remarks about the poet’...             0   \n",
+       "25  an anonymous letter which stated that Pushkin’...             0   \n",
+       "26  an anonymous letter which stated that Pushkin’...             1   \n",
+       "\n",
+       "    opponent_shot  \n",
+       "0             0.0  \n",
+       "1             0.0  \n",
+       "2             0.0  \n",
+       "3             1.0  \n",
+       "4             0.0  \n",
+       "5             0.0  \n",
+       "6             0.0  \n",
+       "7             0.0  \n",
+       "8             1.0  \n",
+       "9             0.0  \n",
+       "10            1.0  \n",
+       "11            0.0  \n",
+       "12            0.0  \n",
+       "13            0.0  \n",
+       "14            0.0  \n",
+       "15            1.0  \n",
+       "16            0.0  \n",
+       "17            NaN  \n",
+       "18            0.0  \n",
+       "19            0.0  \n",
+       "20            0.0  \n",
+       "21            0.0  \n",
+       "22            0.0  \n",
+       "23            0.0  \n",
+       "24            NaN  \n",
+       "25            0.0  \n",
+       "26            1.0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.DataFrame.from_csv(StringIO(requests.get(DUELS_CSV_URL).text), index_col=None)\n",
-    "df.head()"
+    "df.head(30)"
    ]
   },
   {
@@ -444,18 +737,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
   }
  },
  "nbformat": 4,
